HHH-5182 - Inject SessionFactory into "non-basic" Types
git-svn-id: https://svn.jboss.org/repos/hibernate/core/trunk@19374 1b8cb986-b30d-0410-93ca-fae66ebed9b2